# blockchain-lab

./: .gitignore  Cargo.toml  README.md
bcl_core/: Cargo.toml
bcl_core/src/: blockdata.rs  lib.rs  mem.rs  num.rs
bcl_core/src/blockdata/: block.rs  script.rs  transaction.rs
bcl_core/src/num/: hash_types.rs  uint.rs
bcl_core/tests/: test_block.rs
core/: Cargo.toml
docs/: diary.md
