[package]
name = "bcl_core"
version = "0.0.0"
authors = ["zuzu"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.bytes]
version = "0.5"

[dependencies.chrono]
version = "0.4"

[dependencies.miniserde]
version = "0.1"

[dependencies.ring]
version = "0.16"